--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --plugin-search-dir . --check . && eslint .",
         "format": "prettier --plugin-search-dir . --write .",
-        "generate": "rm -rf ./generated/spacetraders-sdk; openapi-generator-cli generate --generator-key spacetraders-ts"
+        "generate": "rm -rf ./src/lib/generated/spacetraders-sdk; openapi-generator-cli generate --generator-key spacetraders-ts"
     },
     "devDependencies": {
         "@openapitools/openapi-generator-cli": "^2.7.0",
@@ -32,8 +32,5 @@
         "typescript": "^5.0.0",
         "vite": "^4.4.2"
     },
-    "type": "module",
-    "dependencies": {
-        "spacetraders-sdk": "link:generated/spacetraders-sdk"
-    }
+    "type": "module"
 }
